--- a/env_test/html/task_submit.html
+++ b/env_test/html/task_submit.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=gb2312">
 <title>cat</title>
@@ -22,5 +22,6 @@
 </tr>
 </table>
 </form>
+
 </body>
 </html>
